--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+
+<!DOCTYPE html>
+ <head>
+  <title>Wendy Bite | About Me</title>
+  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf8">
+ </head>
+ <body>
+   <header>
+     <h1>Arthur C. Adams</h1>
+     <h2>Web Developer</h2>
+     <h2>With Extensive Background in Software Configiuration Management &amp;
+       Build and Release Management</h2>
+   </header>
+
+   <main>
+
+   </main>
+
+   <footer>
+   </footer>
+
+ </body>
