--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
  <head>
-  <title>Wendy Bite | About Me</title>
+  <title>Arthur C. Adams | About Me</title>
   <link rel="stylesheet" href="styles.css">
   <meta charset="utf8">
  </head>
@@ -9,12 +9,38 @@
    <header>
      <h1>Arthur C. Adams</h1>
      <h2>Web Developer</h2>
-     <h2>With Extensive Background in Software Configiuration Management &amp;
-       Build and Release Management</h2>
+     <h3>with Extensive Background in Software Configuration Management and
+       Build &amp; Release Management</h3>
+
    </header>
 
    <main>
+     <img src="Luke-Skywalker.jpg"
+     alt="Placeholder, till I get a better head shot, or join the Jedi"
+       title="Placeholder, till I get a better head shot, or join the Jedi"/>
+       <h3>Who am I?</h3>
+       <p>I have worked in software development for over two decades. My degree
+         is in Electrical Engineering, but my first professional job involved
+         supporting a <skill><a href="http://www.cadence.com/en/default.aspx"
+           target="_blank">Microelectronics Computer-Aided Design System</a></skill>.
+           This lead to a
+          transition into software development, eventually spending several year
+          in various positions supporting Software Configuration Management
+          (tools such as <skill><a href="https://subversion.apache.org">Subversion</a></skill>
+            and <skill><a href="http://www-03.ibm.com/software/products/en/clearcase">
+              Rational ClearCase</a></skill>).
+        </p>
+        <p>
+          In May of 2016, I began a <a href="https://generalassemb.ly/education/web-development-immersive">twelve week immersive web development program
+          at General Assembly</a>.
+        </p>
+        <h3>My Skills</h3>
+        <ul>
+          <li><skill>Perl</skill>: I've been programming in Perl for over fifteen
+            years now.</li>
+          
 
+        <a href="resume.html"  target="_blank">My Resume</a>
    </main>
 
    <footer>
