--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
   <meta charset="utf8">
  </head>
  <body>
-   <header>
-     <h1>Arthur C. Adams</h1>
-     <h2>Web Developer</h2>
-     <h3>with Extensive Background in Software Configuration Management and
-       Build &amp; Release Management</h3>
 
-   </header>
+<ul class="menu">
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="history.html">Work History</a></li>
+  <li><a href="skills.html">Skills Inventory</a></li>
+  <li><a href="about_me.html">About Me</a></li>
+</ul>
 
-   <main>
-     <img src="Luke-Skywalker.jpg"
-     alt="Placeholder, till I get a better head shot, or join the Jedi"
-       title="Placeholder, till I get a better head shot, or join the Jedi"/>
+<div class="main">
+
+<table>
+  <tr>
+    <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
+  </tr>
+  <tr>
+    <td><h2>Web Developer</h2></td>
+  </tr>
+  <tr>
+    <td><h3>with Extensive Background in Software Configuration Management and
+      Build &amp; Release Management</h3></td>
+  </tr>
+</table>
        <h3>Who am I?</h3>
        <p>I have worked in software development for over two decades. My degree
          is in Electrical Engineering, but my first professional job involved
@@ -34,16 +44,6 @@
           In May of 2016, I began a <a href="https://generalassemb.ly/education/web-development-immersive">twelve week immersive web development program
           at General Assembly</a>.
         </p>
-        <h3>My Skills</h3>
-        <ul>
-          <li><skill>Perl</skill>: I've been programming in Perl for over fifteen
-            years now.</li>
-          
 
-        <a href="resume.html"  target="_blank">My Resume</a>
-   </main>
-
-   <footer>
-   </footer>
-
+ </div>
  </body>
