added work history, needs formatting

--- a/history.html
+++ b/history.html
@@ -29,5 +29,35 @@
   </tr>
 </table>
 
+<div class="date_range">Nov 2014 – Aug 2015</div> Hewlett-Packard
+Configuration Manager
+Performed Software Configuration Management as part of DevOps support for a contract with the Food and Drug Administration.
+Technologies Used: Subversion, Jira, MoveIt, HP Service ManagerTrained and assisted users with Subversion usage, with many finding it a new technology
+<div class="date_range">Dec 2012 – Sep 2014</div> 21st Century Technologies
+Configuration Manager
+Completely restructured the CM process, taking it from a badly “broken” system that regularly produced bad deliveries to the customer to one that functioned properly
+Technologies Used: Subversion, Perl, Redmine, in support of ColdFusion Development Project
+<div class="date_range">April 2012 – Dec 2012</div> TerpSys, Inc
+Network Engineer (Configuration Management)
+Performed Software Configuration Management support as part of a DevOps team for over one hundred projects (mostly Java-based) for the National Cancer Institute.
+Technologies Used: Subversion, AntHill Pro, Nexus/Maven, Perl
+<div class="date_range">Oct 2011 – April 2012</div> VETS-Inc (temp-to-perm position via KForce)
+Configuration Manager
+Technologies Used: Subversion, Bugzilla, IBM/Rational Jazz suite, Perl
+Performed Configuration Management/DevOps support for an agile methodology Java development project for the Department of Veterans Affairs.
+<div class="date_range">Mar  2007 – Sep 2011</div> Aquilent, Inc.
+Senior Technical Consultant (Configuration Management)
+Technologies Used: Subversion, ClearQuest, Cruise Control, and Perl, in support of a J2EE/BEA WebLogic Development project
+<div class="date_range">June 1996 – March 2007</div> Raytheon
+Senior Software Engineer (Configuration Management)
+Technologies Used: ClearCase, ClearQuest, Subversion, Bugzilla
+<div class="date_range">January 1986 – June 1996</div>	National Security Agency
+Electronics Engineer
+Supported Microelectronics Computer Aided Design and Computer Aided Manufacturing Systems in a Unix environment.
+Education
+General Assembly, Web Development Immersive, May - August 2016, Washington, DC
+Bachelor of Science, Electrical Engineering, 1989, University of Tennessee Knoxville
+
+
  </div>
  </body>
