completed work history

--- a/about_me.html
+++ b/about_me.html
@@ -11,23 +11,24 @@
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
+  <li><a href="education.html">Education</a></li>
   <li><a href="about_me.html">About Me</a></li>
 </ul>
 
 <div class="main">
 
-<table>
-  <tr>
-    <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
-  </tr>
-  <tr>
-    <td><h2>Web Developer</h2></td>
-  </tr>
-  <tr>
-    <td><h3>with Extensive Background in Software Configuration Management and
-      Build &amp; Release Management</h3></td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
+    </tr>
+    <tr>
+      <td><h2>Web Developer</h2></td>
+    </tr>
+    <tr>
+      <td><h3>with Extensive Background in Software Configuration Management and
+        Build &amp; Release Management</h3></td>
+    </tr>
+  </table>
 
  </div>
  </body>
