--- a/history.html
+++ b/history.html
@@ -11,6 +11,7 @@
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
+  <li><a href="education.html">Education</a></li>
   <li><a href="about_me.html">About Me</a></li>
 </ul>
 
@@ -29,34 +30,44 @@
   </tr>
 </table>
 
-<div class="date_range">Nov 2014 – Aug 2015</div> Hewlett-Packard
-Configuration Manager
-Performed Software Configuration Management as part of DevOps support for a contract with the Food and Drug Administration.
-Technologies Used: Subversion, Jira, MoveIt, HP Service ManagerTrained and assisted users with Subversion usage, with many finding it a new technology
-<div class="date_range">Dec 2012 – Sep 2014</div> 21st Century Technologies
-Configuration Manager
-Completely restructured the CM process, taking it from a badly “broken” system that regularly produced bad deliveries to the customer to one that functioned properly
-Technologies Used: Subversion, Perl, Redmine, in support of ColdFusion Development Project
-<div class="date_range">April 2012 – Dec 2012</div> TerpSys, Inc
-Network Engineer (Configuration Management)
-Performed Software Configuration Management support as part of a DevOps team for over one hundred projects (mostly Java-based) for the National Cancer Institute.
-Technologies Used: Subversion, AntHill Pro, Nexus/Maven, Perl
-<div class="date_range">Oct 2011 – April 2012</div> VETS-Inc (temp-to-perm position via KForce)
-Configuration Manager
-Technologies Used: Subversion, Bugzilla, IBM/Rational Jazz suite, Perl
-Performed Configuration Management/DevOps support for an agile methodology Java development project for the Department of Veterans Affairs.
-<div class="date_range">Mar  2007 – Sep 2011</div> Aquilent, Inc.
-Senior Technical Consultant (Configuration Management)
-Technologies Used: Subversion, ClearQuest, Cruise Control, and Perl, in support of a J2EE/BEA WebLogic Development project
-<div class="date_range">June 1996 – March 2007</div> Raytheon
-Senior Software Engineer (Configuration Management)
-Technologies Used: ClearCase, ClearQuest, Subversion, Bugzilla
-<div class="date_range">January 1986 – June 1996</div>	National Security Agency
-Electronics Engineer
-Supported Microelectronics Computer Aided Design and Computer Aided Manufacturing Systems in a Unix environment.
-Education
-General Assembly, Web Development Immersive, May - August 2016, Washington, DC
-Bachelor of Science, Electrical Engineering, 1989, University of Tennessee Knoxville
+<a href="hpe.com" class="employer">Hewlett-Packard</a>
+<div class="date_range">Nov 2014 – Aug 2015</div>
+<div class="jobtitle">Configuration Manager</div>
+<div class="duties">Performed Software Configuration Management as part of DevOps support for a contract with the Food and Drug Administration</div>
+<div class="techs">Subversion, Jira, MoveIt, HP Service ManagerTrained and assisted users with Subversion usage, with many finding it a new technology</div>
+<br/>
+<a href="21ct.com" class="employer">21st Century Technologies</a>
+<div class="date_range">Dec 2012 – Sep 2014</div>
+<div class="jobtitle">Configuration Manager</div>
+<div class="duties">Completely restructured the CM process, taking it from a badly “broken” system that regularly produced bad deliveries to the customer to one that functioned properly</div>
+<div class="techs">Subversion, Perl, Redmine, in support of ColdFusion Development Project</div>
+<br/>
+<a href="terpsys.com" class="employer">TerpSys, Inc</a>
+<div class="date_range">April 2012 – Dec 2012</div>
+<div class="jobtitle">Network Engineer (Configuration Management)</div>
+<div class="duties">Performed Software Configuration Management support as part of a DevOps team for over one hundred projects (mostly Java-based) for the National Cancer Institute.</div>
+<div class="techs">Subversion, AntHill Pro, Nexus/Maven, Perl</div>
+<br/>
+<a href="vets-inc.com" class="employer">VETS-Inc</a> (temp-to-perm position via <a href="kforce.com" class="employer">KForce</a>)
+<div class="date_range">Oct 2011 – April 2012</div>
+<div class="jobtitle">Configuration Manager</div>
+<div class="duties">Performed Configuration Management/DevOps support for an agile methodology Java development project for the Department of Veterans Affairs.</div>
+<div class="techs">Subversion, Bugzilla, IBM/Rational Jazz suite, Perl</div>
+<br/>
+<a href="aquilent.com" class="employer">Aquilent, Inc.</a>
+<div class="date_range">Mar  2007 – Sep 2011</div>
+<div class="jobtitle">Senior Technical Consultant (Configuration Management)</div>
+<div class="techs">Subversion, ClearQuest, Cruise Control, and Perl, in support of a J2EE/BEA WebLogic Development project</div>
+<br/>
+<a href="raytheon.com" class="employer">Raytheon</a>
+<div class="date_range">June 1996 – March 2007</div>
+<div class="jobtitle">Senior Software Engineer (Configuration Management)</div>
+<div class="techs">ClearCase, ClearQuest, Subversion, Bugzilla</div>
+<br/>
+<a href="nsa.gov" class="employer">National Security Agency</a>
+<div class="date_range">January 1986 – June 1996</div>
+<div class="jobtitle">Electronics Engineer</div>
+<div class="duties">Supported Microelectronics Computer Aided Design and Computer Aided Manufacturing Systems in a Unix environment.</div>
 
 
  </div>
