--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
+  <li><a href="education.html">Education</a></li>
   <li><a href="about_me.html">About Me</a></li>
 </ul>
 
