--- a/education.html
+++ b/education.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
  <head>
   <title>Arthur C. Adams | About Me</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/education.css">
   <meta charset="utf8">
  </head>
  <body>
@@ -12,27 +13,39 @@
   <li><a href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
   <li><a class="active" href="education.html">Education</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
   <li><a href="about_me.html">About Me</a></li>
 </ul>
 
 <div class="main">
 
-<table>
-  <tr>
-    <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
-  </tr>
-  <tr>
-    <td><h2>Web Developer</h2></td>
-  </tr>
-  <tr>
-    <td><h3>with Extensive Background in Software Configuration Management and
-      Build &amp; Release Management</h3></td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
+    </tr>
+    <tr>
+      <td><h2>Web Developer</h2></td>
+    </tr>
+    <tr>
+      <td><h3>with Extensive Background in Software Configuration Management and
+        Build &amp; Release Management</h3></td>
+    </tr>
+  </table>
 
-Education
-General Assembly, Web Development Immersive, May - August 2016, Washington, DC
-Bachelor of Science, Electrical Engineering, 1989, University of Tennessee Knoxville
+  <div class="school">General Assembly</div>
+  <div class="course">Web Development Immersive</div>
+  <div class="date_range">May - August 2016</div>
+  <div class="location">Washington, DC</div>
+  <br/>
+  <div class="school">Northern Virginia Community College</div>
+  <div class="course">Introductory to Java (classroom) and Python (on-line)</div>
+  <div class="date_range">Jan - May 2016</div>
+  <br/>
+  <div class="school">University of Tennessee</div>
+  <div class="course">Bachelor of Science, Electrical Engineering</div>
+  <div class="date_range">Sep 1984 - May 1989</div>
+  <div class="location">Knoxville, TN</div>
+  <br/>
 
 
  </div>
