--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
  <head>
   <title>Arthur C. Adams | About Me</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <meta charset="utf8">
  </head>
  <body>
@@ -12,6 +12,7 @@
   <li><a href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
   <li><a href="education.html">Education</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
   <li><a href="about_me.html">About Me</a></li>
 </ul>
 
