--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,10 @@
 
 <ul class="menu">
   <li><a href="index.html">Home</a></li>
-  <li><a class="active" href="history.html">Work History</a></li>
+  <li><a href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
   <li><a href="education.html">Education</a></li>
+  <li><a class="active" href="portfolio.html">Portfolio</a></li>
   <li><a href="about_me.html">About Me</a></li>
 </ul>
 
