--- a/about_me.html
+++ b/about_me.html
@@ -9,10 +9,11 @@
 
 <ul class="menu">
   <li><a href="index.html">Home</a></li>
-  <li><a class="active" href="history.html">Work History</a></li>
+  <li><a href="history.html">Work History</a></li>
   <li><a href="skills.html">Skills Inventory</a></li>
   <li><a href="education.html">Education</a></li>
-  <li><a href="about_me.html">About Me</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a class="active" href="about_me.html">About Me</a></li>
 </ul>
 
 <div class="main">
