--- a/history.html
+++ b/history.html
@@ -15,7 +15,7 @@
   <li><a href="skills.html">Skills Inventory</a></li>
   <li><a href="education.html">Education</a></li>
   <li><a href="portfolio.html">Portfolio</a></li>
-  <li><a href="about_me.html">About Me</a></li>
+  <!--  <li><a href="about_me.html">About Me</a></li> -->
 </ul>
 
 <div class="main">
