--- a/index-js.html
+++ b/index-js.html
@@ -1,19 +1,23 @@
 
 <!DOCTYPE html>
+<html>
  <head>
   <title>Arthur C. Adams | About Me</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="aca.js"></script>
+  <script src="http://www.w3schools.com/lib/w3data.js"></script>
   <meta charset="utf8">
  </head>
  <body>
 
 <ul class="menu">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="history.html">Work History</a></li>
-  <li><a href="skills.html">Skills Inventory</a></li>
-  <li><a href="education.html">Education</a></li>
-  <li><a class="active" href="portfolio.html">Portfolio</a></li>
-  <!--  <li><a href="about_me.html">About Me</a></li> -->
+  <li class="menuitem" id="index">Home</li>
+  <li class="menuitem" id="history">Work History</li>
+  <li class="menuitem" id="skills">Skills Inventory</li>
+  <li class="menuitem" id="education">Education</li>
+  <li class="menuitem" id="portfolio" class="active">Portfolio</li>
+  <!--  <li href="about_me.html">About Me</li> -->
 </ul>
 
   <div class="main">
@@ -35,6 +39,8 @@
       <tr>
     </table>
 
+    <div id="core"></div> 
 
    </div>
  </body>
+</html>
