--- a/intro.html
+++ b/intro.html
@@ -1,36 +1,4 @@
-
-<!DOCTYPE html>
- <head>
-  <title>Arthur C. Adams | About Me</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <meta charset="utf8">
- </head>
- <body>
-
-<ul class="menu">
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="history.html">Work History</a></li>
-  <li><a href="skills.html">Skills Inventory</a></li>
-  <li><a href="education.html">Education</a></li>
-  <li><a href="portfolio.html">Portfolio</a></li>
-<!--  <li><a href="about_me.html">About Me</a></li> -->
-</ul>
-
-<div class="main">
-
-<table>
-  <tr>
-    <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
-  </tr>
-  <tr>
-    <td><h2>Web Developer</h2></td>
-  </tr>
-  <tr>
-    <td><h3>with Extensive Background in Software Configuration Management and
-      Build &amp; Release Management</h3></td>
-  </tr>
-</table>
-       <h3>Who am I?</h3>
+<h3\>Who am I?</h3>
        <p>I have worked in software development for over two decades. My degree
          is in Electrical Engineering, but my first professional job involved
          supporting a <skill><a href="http://www.cadence.com/en/default.aspx"
@@ -46,6 +14,4 @@
           In May of 2016, I began a <a href="https://generalassemb.ly/education/web-development-immersive">twelve week immersive web development program
           at General Assembly</a>.
         </p>
-
- </div>
- </body>
+"
