fixed typo in intro

--- a/intro.html
+++ b/intro.html
@@ -1,4 +1,4 @@
-<h3\>Who am I?</h3>
+<h3>Who am I?</h3>
        <p>I have worked in software development for over two decades. My degree
          is in Electrical Engineering, but my first professional job involved
          supporting a <skill><a href="http://www.cadence.com/en/default.aspx"
