--- a/index.html
+++ b/index.html
@@ -1,51 +1,45 @@
 
 <!DOCTYPE html>
+<html>
  <head>
   <title>Arthur C. Adams | About Me</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="aca.js"></script>
   <meta charset="utf8">
  </head>
  <body>
 
 <ul class="menu">
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="history.html">Work History</a></li>
-  <li><a href="skills.html">Skills Inventory</a></li>
-  <li><a href="education.html">Education</a></li>
-  <li><a href="portfolio.html">Portfolio</a></li>
-<!--  <li><a href="about_me.html">About Me</a></li> -->
+  <li class="menuitem" id="intro">Home</li>
+  <li class="menuitem" id="history">Work History</li>
+  <li class="menuitem" id="skills">Skills Inventory</li>
+  <li class="menuitem" id="education">Education</li>
+  <li class="menuitem" id="portfolio" class="active">Portfolio</li>
+  <!--  <li href="about_me.html">About Me</li> -->
 </ul>
 
-<div class="main">
+  <div class="main">
 
-<table>
-  <tr>
-    <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="aca.jpeg"></img></td>
-  </tr>
-  <tr>
-    <td><h2>Web Developer</h2></td>
-  </tr>
-  <tr>
-    <td><h3>with Extensive Background in Software Configuration Management and
-      Build &amp; Release Management</h3></td>
-  </tr>
-</table>
-       <h3>Who am I?</h3>
-       <p>I have worked in software development for over two decades. My degree
-         is in Electrical Engineering, but my first professional job involved
-         supporting a <skill><a href="http://www.cadence.com/en/default.aspx"
-           target="_blank">Microelectronics Computer-Aided Design System</a></skill>.
-           This lead to a
-          transition into software development, eventually spending several year
-          in various positions supporting Software Configuration Management
-          (tools such as <skill><a href="https://subversion.apache.org">Subversion</a></skill>
-            and <skill><a href="http://www-03.ibm.com/software/products/en/clearcase">
-              Rational ClearCase</a></skill>).
-        </p>
-        <p>
-          In May of 2016, I began a <a href="https://generalassemb.ly/education/web-development-immersive">twelve week immersive web development program
-          at General Assembly</a>.
-        </p>
+    <table>
+      <tr>
+        <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" src="arthur.png"></img></td>
+      </tr>
+      <tr>
+        <td><h2>Web Developer</h2></td>
+      </tr>
+      <tr>
+        <td><h3>with Extensive Background in Software Configuration Management and
+          Build &amp; Release Management</h3></td>
+      </tr>
+    </table>
 
- </div>
+    <table>
+      <tr>
+    </table>
+
+    <div id="core"></div>
+
+   </div>
  </body>
+</html>
