start of portfolio page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Arthur C. Adams | About Me</title>
+  <title>Arthur C. Adams</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="aca.js"></script>
@@ -15,7 +15,7 @@
   <li class="menuitem" id="history">Work History</li>
   <li class="menuitem" id="skills">Skills Inventory</li>
   <li class="menuitem" id="education">Education</li>
-  <li class="menuitem" id="portfolio" class="active">Portfolio</li>
+  <li class="menuitem" id="portfolio">Portfolio</li>
   <!--  <li href="about_me.html">About Me</li> -->
 </ul>
 
