new photo location, B&W portrait

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <table>
       <tr>
-        <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" class="portrait" src="arthur.png"></img></td>
+        <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" class="portrait" src="img/arthur.png"></img></td>
       </tr>
       <tr>
         <td><h2>Web Developer</h2></td>
