--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <table>
-  <tr><th colspan="2">A General Assemblage of Trivia</th></tr>
+  <tr><th>A General Assemblage of Trivia</th><th>&nbsp;</th></tr>
   <tr>
     <td>
       <p>The project is an implementation of a multiple choice trivia game.  There's only four questions included, but since they're stored as a JavaScript hash, more questions can easily be added.</p>
@@ -18,10 +18,22 @@
       <p>A large increase in the number of questions would require a database of questions. I'd like to add that in the future, and also add things like allowing the user to select categories and difficulty. Beyond that, a database would allow persistent scoring with user logins.<p/>
       <p>Still more details can be found in the project's <a href="https://github.com/arthuradams/not-jeopardy">README file</a>.</p>
     </td>
-    <td rowspan="2"><img src="trivia.png"/></td>
+    <td rowspan="2"><img src="img/trivia.png"/></td>
   </tr>
   <tr>
     <td><a href="http://arthuradams.github.io/not-jeopardy/">Live version of the game</a></td>
   </tr>
-  
+  <tr><th>Together, They're Detectives!</th><th>&nbsp;</th></tr>
+  <tr>
+    <td>
+      <p>One of our assignments for the course was to explore an API of our choosing. One of our instructors suggested the API for <a href="http://ineedaprompt.com/">INeedAPrompt</a>, a website he created to generate random characters and situations.</p>
+      <p>I explored the site and its API, and found it amused me greatly. It reminded me of a old joke that you can take descriptions of two utterly bizarre characters, add "togethet, they're detectives!", and it creates the plot of a TV show. (TVTropes calls the concept <a href="http://tvtropes.org/pmwiki/pmwiki.php/Main/TheyFightCrime">They Fight Crime</a>.</p>
+      <p></p>
+    </td>
+    <td rowspan="2"><img src=""/></td>
+  </tr>
+  <tr>
+    <td><a href="">Live version of the game</a></td>
+  </tr>
+
 </table>
