added this site to portfolio, portrait changes to color on hover, added footer with various links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul class="menu">
   <li class="menuitem" id="intro">Home</li>
   <li class="menuitem" id="history">Work History</li>
-  <li class="menuitem" id="skills">Skills Inventory</li>
+<!--  <li class="menuitem" id="skills">Skills Inventory</li> -->
   <li class="menuitem" id="education">Education</li>
   <li class="menuitem" id="portfolio">Portfolio</li>
   <!--  <li href="about_me.html">About Me</li> -->
@@ -40,7 +40,14 @@
 
     <div id="core"></div>
 
+    <table>
+      <tr>
+        <td><a href="https://github.com/arthuradams">My Github Repo</a></td>
+        <td><a href="https://www.linkedin.com/in/arthurcadams">My LinkedIn Profile</a></td>
+        <td><a href="mailto:arthuradams@gmail.com?Subject=Contact%20via%20web%20page">Send me mail</a></td>
+      </tr>
+    </table>
    </div>
-   
+
  </body>
 </html>
