--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<table>
+<table id="portfoliotable">
   <tr><th>A General Assemblage of Trivia</th><th>&nbsp;</th></tr>
   <tr>
     <td>
@@ -33,7 +33,7 @@
       <p>Eventually, I would like to fork the <a href="https://github.com/RobertAKARobin/inap-node">INeedAPrompt source code</a>, strip it down to just the core that generates the prompts, and rewrite it to male it my own. This serves several purposes:</p>
       <ol class="alphalist">
         <li>It allows me to keep working on, and learning from, a project that has brought my amusement. I'll probably convert it to a different language.</li>
-        <li>I won't be dedendent on a web site maintained by someone else to keep my project working.</li>i
+        <li>I won't be dedendent on a web site maintained by someone else to keep my project working.</li>
         <li>I will be able to host the application at a secure site. When I attempted to host it in my github.io space, I was unable to connect to the API, since it is hosted at a non-secure site.</p>
       </ol>
     </td>
@@ -41,7 +41,22 @@
   </tr>
   <tr>
     <td><p>This is currently not hosted anywhere, due to the issues with connecting to the API mentioned above.</p>
-        <p>To view it, download the source from the <a href="https://github.com/arthuradams/fun-with-apis">project github repo</a>, and view index.html in a browser.</p></td>
+        <p>To view it, download the source from the <a href="https://github.com/arthuradams/fun-with-apis">project github repo</a>, and view index.html in a browser.</p>
+      </td>
   </tr>
-
+  <tr><th>Personal Web Site</th><th>&nbsp;</th></tr>
+  <tr>
+    <td>
+      <p>This site, in other words. It's all HTML, CSS and a little JavaScript/JQuery. The scripting covers one thing -- this is all done as one page, with the menu executing a script that changes the body of the page.</p>
+      <p>This demonstrates my philosophy of web design. While I am much more of a developer than a designer, I prefer web sites to be simple, even spartan. This is a personal bias, dating back to a time when I was using a dial-up connection on a somewhat defective modem. Overly complex sites were slow to load, and I came to prefer simplicity. I think <a href="https://craigslist.org/">craigslist</a> and <a href="http://www.drudgereport.com/">The Drudge Report</a> are good style models.</p>
+      <p>That aside, I do have an engineer's curiosity and desire to learn, so I've added a few "Easter Eggs". For instance, try hovering the mouse pointer over my portrait in the upper right. I'll add more later.</p>
+    </td>
+    <td rowspan="2"><img src="img/personal_site.png"/></td>
+  </tr>
+  <tr>
+    <td>
+      <p>The actual hosting of this page is on github, at <a href="http://arthuradams.github.io/">arthuradams.github.io</a>.</p>
+      <p>It can also be accessed at <a href="http://arthurcadams.com/">arthurcadams.com</a>. That's a redirect via godaddy to the github site. godaddy is providing masking so the URL for that stays arthurcadams.com. godaddy's masking adds HTML that validators show as non-compliant.</p>
+    </td>
+  </tr>
 </table>
