each separate text block now has its own style sheet; better formatting of portfolio table

--- a/education.html
+++ b/education.html
@@ -1,17 +1,17 @@
 
+<link rel="stylesheet" href="css/education.css">
 
-  <div class="school"><a href="https://generalassemb.ly/">General Assembly</a></div>
-  <div class="course">Web Development Immersive</div>
-  <div class="date_range">May - August 2016</div>
-  <div class="location">Washington, DC</div>
-  <br/>
-  <div class="school"><a href="http://www.nvcc.edu/">Northern Virginia Community College</a></div>
-  <div class="course">Introductory to Java (classroom) and Python (on-line)</div>
-  <div class="date_range">Jan - May 2016</div>
-  <br/>
-  <div class="school"><a href="http://www.utk.edu/">University of Tennessee</a></div>
-  <div class="course">Bachelor of Science, Electrical Engineering</div>
-  <div class="date_range">Sep 1984 - May 1989</div>
-  <div class="location">Knoxville, TN</div>
-  <br/>
-  
+<div class="school"><a href="https://generalassemb.ly/">General Assembly</a></div>
+<div class="course">Web Development Immersive</div>
+<div class="date_range">May - August 2016</div>
+<div class="location">Washington, DC</div>
+<br/>
+<div class="school"><a href="http://www.nvcc.edu/">Northern Virginia Community College</a></div>
+<div class="course">Introductory to Java (classroom) and Python (on-line)</div>
+<div class="date_range">Jan - May 2016</div>
+<br/>
+<div class="school"><a href="http://www.utk.edu/">University of Tennessee</a></div>
+<div class="course">Bachelor of Science, Electrical Engineering</div>
+<div class="date_range">Sep 1984 - May 1989</div>
+<div class="location">Knoxville, TN</div>
+<br/>
