--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="main">
 
-    <table>
+    <table class="header">
       <tr>
         <td><h1>Arthur C. Adams</h1></td><td rowspan="3"><img height="300" class="portrait" src="img/arthur.png"></img></td>
       </tr>
@@ -40,7 +40,7 @@
 
     <div id="core"></div>
 
-    <table>
+    <table class="footer">
       <tr>
         <td><a href="https://github.com/arthuradams">My Github Repo</a></td>
         <td><a href="https://www.linkedin.com/in/arthurcadams">My LinkedIn Profile</a></td>
