--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,7 @@
+<link rel="stylesheet" href="css/portfolio.css">
+
 <table id="portfoliotable">
-  <tr><th>A General Assemblage of Trivia</th><th>&nbsp;</th></tr>
+  <tr><th colspan="2">A General Assemblage of Trivia</th></tr>
   <tr>
     <td>
       <p>The project is an implementation of a multiple choice trivia game.  There's only four questions included, but since they're stored as a JavaScript hash, more questions can easily be added.</p>
@@ -18,12 +20,13 @@
       <p>A large increase in the number of questions would require a database of questions. I'd like to add that in the future, and also add things like allowing the user to select categories and difficulty. Beyond that, a database would allow persistent scoring with user logins.<p/>
       <p>Still more details can be found in the project's <a href="https://github.com/arthuradams/not-jeopardy">README file</a>.</p>
     </td>
-    <td rowspan="2"><img src="img/trivia.png"/></td>
+    <td rowspan="2"><img class="screenshot" src="img/trivia.png"/></td>
   </tr>
+
   <tr>
     <td><a href="http://arthuradams.github.io/not-jeopardy/">Live version of the game</a></td>
   </tr>
-  <tr><th>Together, They're Detectives!</th><th>&nbsp;</th></tr>
+  <tr><th colspan="2">Together, They're Detectives!</th></tr>
   <tr>
     <td>
       <p>One of our assignments for the course was to explore an API of our choosing. One of our instructors suggested the API for <a href="http://ineedaprompt.com/">INeedAPrompt</a>, a website he created to generate random characters and situations.</p>
@@ -37,21 +40,21 @@
         <li>I will be able to host the application at a secure site. When I attempted to host it in my github.io space, I was unable to connect to the API, since it is hosted at a non-secure site.</p>
       </ol>
     </td>
-    <td rowspan="2"><img src="img/detectives.png"/></td>
+    <td rowspan="2"><img class="screenshot" src="img/detectives.png"/></td>
   </tr>
   <tr>
     <td><p>This is currently not hosted anywhere, due to the issues with connecting to the API mentioned above.</p>
         <p>To view it, download the source from the <a href="https://github.com/arthuradams/fun-with-apis">project github repo</a>, and view index.html in a browser.</p>
       </td>
   </tr>
-  <tr><th>Personal Web Site</th><th>&nbsp;</th></tr>
+  <tr><th colspan="2">Personal Web Site</th></tr>
   <tr>
     <td>
       <p>This site, in other words. It's all HTML, CSS and a little JavaScript/JQuery. The scripting covers one thing -- this is all done as one page, with the menu executing a script that changes the body of the page.</p>
       <p>This demonstrates my philosophy of web design. While I am much more of a developer than a designer, I prefer web sites to be simple, even spartan. This is a personal bias, dating back to a time when I was using a dial-up connection on a somewhat defective modem. Overly complex sites were slow to load, and I came to prefer simplicity. I think <a href="https://craigslist.org/">craigslist</a> and <a href="http://www.drudgereport.com/">The Drudge Report</a> are good style models.</p>
       <p>That aside, I do have an engineer's curiosity and desire to learn, so I've added a few "Easter Eggs". For instance, try hovering the mouse pointer over my portrait in the upper right. I'll add more later.</p>
     </td>
-    <td rowspan="2"><img src="img/personal_site.png"/></td>
+    <td rowspan="2"><img class="screenshot" src="img/personal_site.png"/></td>
   </tr>
   <tr>
     <td>
