--- a/intro.html
+++ b/intro.html
@@ -1,17 +1,3 @@
 <h3>Who am I?</h3>
-       <p>I have worked in software development for over two decades. My degree
-         is in Electrical Engineering, but my first professional job involved
-         supporting a <skill><a href="http://www.cadence.com/en/default.aspx"
-           target="_blank">Microelectronics Computer-Aided Design System</a></skill>.
-           This lead to a
-          transition into software development, eventually spending several year
-          in various positions supporting Software Configuration Management
-          (tools such as <skill><a href="https://subversion.apache.org">Subversion</a></skill>
-            and <skill><a href="http://www-03.ibm.com/software/products/en/clearcase">
-              Rational ClearCase</a></skill>).
-        </p>
-        <p>
-          In May of 2016, I began a <a href="https://generalassemb.ly/education/web-development-immersive">twelve week immersive web development program
-          at General Assembly</a>.
-        </p>
-"
+<p>I have worked in software development for over two decades. My degree is in Electrical Engineering, but my first professional job involved supporting a <skill><a href="http://www.cadence.com/en/default.aspx" target="_blank">Microelectronics Computer-Aided Design System</a></skill>. This lead to a transition into software development, eventually spending several years in various positions supporting Software Configuration Management (tools such as <skill><a href="https://subversion.apache.org">Subversion</a></skill> and <skill><a href="http://www-03.ibm.com/software/products/en/clearcase"> Rational ClearCase</a></skill>).</p>
+<p>In May of 2016, I began a <a href="https://generalassemb.ly/education/web-development-immersive">twelve week immersive web development program at General Assembly</a>.</p>
