note to myself: for a class selector to woek, one must use an actual *class*

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="css/portfolio.css">
 
-<table id="portfoliotable">
+<table class="portfoliotable">
   <tr><th colspan="2">A General Assemblage of Trivia</th></tr>
   <tr>
     <td>
