final layout of portfolio(?)

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,11 @@
     </td>
     <td rowspan="2"><img class="screenshot" src="img/trivia.png"/></td>
   </tr>
-
   <tr>
     <td><a href="http://arthuradams.github.io/not-jeopardy/">Live version of the game</a></td>
   </tr>
+</table>
+<table  class="portfoliotable">
   <tr><th colspan="2">Together, They're Detectives!</th></tr>
   <tr>
     <td>
@@ -47,6 +48,8 @@
         <p>To view it, download the source from the <a href="https://github.com/arthuradams/fun-with-apis">project github repo</a>, and view index.html in a browser.</p>
       </td>
   </tr>
+</table>
+<table class="portfoliotable">
   <tr><th colspan="2">Personal Web Site</th></tr>
   <tr>
     <td>
