added alt tags to images, added transitions to text

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <p>A large increase in the number of questions would require a database of questions. I'd like to add that in the future, and also add things like allowing the user to select categories and difficulty. Beyond that, a database would allow persistent scoring with user logins.<p/>
       <p>Still more details can be found in the project's <a href="https://github.com/arthuradams/not-jeopardy">README file</a>.</p>
     </td>
-    <td rowspan="2"><img class="screenshot" src="img/trivia.png"/></td>
+    <td rowspan="2"><img class="screenshot" alt="Trivia game screenshot" src="img/trivia.png"/></td>
   </tr>
   <tr>
     <td><a href="http://arthuradams.github.io/not-jeopardy/">Live version of the game</a></td>
@@ -41,7 +41,7 @@
         <li>I will be able to host the application at a secure site. When I attempted to host it in my github.io space, I was unable to connect to the API, since it is hosted at a non-secure site.</p>
       </ol>
     </td>
-    <td rowspan="2"><img class="screenshot" src="img/detectives.png"/></td>
+    <td rowspan="2"><img class="screenshot" alt="Together they're detectives screenshot" src="img/detectives.png"/></td>
   </tr>
   <tr>
     <td><p>This is currently not hosted anywhere, due to the issues with connecting to the API mentioned above.</p>
@@ -57,7 +57,7 @@
       <p>This demonstrates my philosophy of web design. While I am much more of a developer than a designer, I prefer web sites to be simple, even spartan. This is a personal bias, dating back to a time when I was using a dial-up connection on a somewhat defective modem. Overly complex sites were slow to load, and I came to prefer simplicity. I think <a href="https://craigslist.org/">craigslist</a> and <a href="http://www.drudgereport.com/">The Drudge Report</a> are good style models.</p>
       <p>That aside, I do have an engineer's curiosity and desire to learn, so I've added a few "Easter Eggs". For instance, try hovering the mouse pointer over my portrait in the upper right. I'll add more later.</p>
     </td>
-    <td rowspan="2"><img class="screenshot" src="img/personal_site.png"/></td>
+    <td rowspan="2"><img class="screenshot" alt="Personakl website screenshot" src="img/personal_site.png"/></td>
   </tr>
   <tr>
     <td>
